Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/NPS_Survey_Summary__c.object-meta.xml
<CustomObject>
    <description>Custom object to store AI-generated summaries of completed NPS Surveys, providing consolidated insights in English for Account and Survey analysis</description>
    <label>NPS Survey Summary</label>
    <nameField>
        <displayFormat>NPS-SUM-{000000}</displayFormat>
        <label>NPS Survey Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS Survey Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>