Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Lookup to the Account associated with this NPS Survey Summary</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPS Survey Summaries</relationshipLabel>
    <relationshipName>NPS_Survey_Summaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>