Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Action_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Action_Recommendations__c</fullName>
    <description>AI-generated action recommendations based on the NPS Survey results</description>
    <label>Action Recommendations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>