Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Action_Recommendations_Display__c.field-meta.xml
<CustomField>
    <fullName>Action_Recommendations_Display__c</fullName>
    <description>Human-readable formatted display of action recommendations for page layout</description>
    <label>Action Recommendations Display</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>