Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <description>Full AI-generated summary text from Agentforce including executive summary, strengths, improvements, and recommendations</description>
    <label>AI Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>