Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <description>Average score across all NPS responses</description>
    <label>Average Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>