Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Created_By_Agentforce__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Agentforce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this summary was automatically created by Agentforce</description>
    <label>Created By Agentforce</label>
    <type>Checkbox</type>
</CustomField>