Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicating if follow-up action is required based on survey results</description>
    <label>Follow-Up Required</label>
    <type>Checkbox</type>
</CustomField>