Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Key_Insights__c.field-meta.xml
<CustomField>
    <fullName>Key_Insights__c</fullName>
    <description>Key insights extracted from the NPS Survey responses</description>
    <label>Key Insights</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>