Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/NPS_Contact__c.field-meta.xml
<CustomField>
    <fullName>NPS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contact who was surveyed</description>
    <label>NPS Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPS Survey Summaries</relationshipLabel>
    <relationshipName>NPS_Survey_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>