Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <description>The main NPS recommendation score from the survey</description>
    <label>NPS Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>