Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/NPS_Survey__c.field-meta.xml
<CustomField>
    <fullName>NPS_Survey__c</fullName>
    <description>Lookup to the NPS Survey record that this summary is based on</description>
    <label>NPS Survey</label>
    <referenceTo>NPS__c</referenceTo>
    <relationshipLabel>NPS Survey Summaries</relationshipLabel>
    <relationshipName>NPS_Survey_Summaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>