Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/NPS_Surveyor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Surveyor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User who conducted the NPS Survey</description>
    <label>NPS Surveyor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NPS_Survey_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>