Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Number_of_Responses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Responses__c</fullName>
    <description>Total number of responses collected in the NPS Survey</description>
    <label>Number of Responses</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>