Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Number_of_Scored_Responses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Scored_Responses__c</fullName>
    <description>Number of responses that were scored in the NPS Survey</description>
    <label>Number of Scored Responses</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>