Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date__c</fullName>
    <description>Date when the NPS Survey was reviewed</description>
    <label>Reviewed Date</label>
    <type>Date</type>
</CustomField>