Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Summary_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Summary_Generation_Date__c</fullName>
    <description>Date and time when the summary was generated</description>
    <label>Summary Generation Date</label>
    <type>DateTime</type>
</CustomField>