Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Summary_Language__c.field-meta.xml
<CustomField>
    <fullName>Summary_Language__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <description>Language in which the summary is generated (default: English)</description>
    <label>Summary Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>