Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Date__c</fullName>
    <description>Date when the NPS Survey was conducted</description>
    <label>Survey Date</label>
    <type>Date</type>
</CustomField>