Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status__c</fullName>
    <description>Status of the NPS Survey at the time the summary was created</description>
    <label>Survey Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>