Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <description>Total combined score from all NPS responses</description>
    <label>Total Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>