Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NPS_Survey__c</columns>
    <columns>NPS_Score__c</columns>
    <columns>Survey_Date__c</columns>
    <columns>Sentiment_Analysis__c</columns>
    <columns>Follow_Up_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All NPS Survey Summaries</label>
</ListView>