Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/listViews/By_Account.listView-meta.xml
<ListView>
    <fullName>By_Account</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NPS_Score__c</columns>
    <columns>Survey_Date__c</columns>
    <columns>Average_Score__c</columns>
    <columns>Sentiment_Analysis__c</columns>
    <columns>Follow_Up_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>Summaries by Account</label>
</ListView>