Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/listViews/Needs_Follow_Up.listView-meta.xml
<ListView>
    <fullName>Needs_Follow_Up</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NPS_Survey__c</columns>
    <columns>NPS_Score__c</columns>
    <columns>Survey_Date__c</columns>
    <columns>Sentiment_Analysis__c</columns>
    <columns>Action_Recommendations__c</columns>
    <columns>CREATEDDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Follow_Up_Required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Needs Follow-Up</label>
</ListView>