Agentforce/force-app/main/default/objects/NPS_Survey_Summary__c/listViews/Recent.listView-meta.xml
<ListView>
    <fullName>Recent</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NPS_Survey__c</columns>
    <columns>NPS_Score__c</columns>
    <columns>Survey_Date__c</columns>
    <columns>Sentiment_Analysis__c</columns>
    <columns>Follow_Up_Required__c</columns>
    <columns>CREATEDDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recent Summaries</label>
</ListView>